test/conformance/kuttl/webhooks/namespaced-policy-clusterpolicy-wildcard/webhooks.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    webhook.kyverno.io/managed-by: kyverno
  name: kyverno-resource-validating-webhook-cfg
webhooks:
- failurePolicy: Fail
  rules:
  - apiGroups:
    - '*'
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    - DELETE
    - CONNECT
    resources:
    - '*'
    - pods/ephemeralcontainers
    scope: '*'
  - apiGroups:
      - '*'
    apiVersions:
      - '*'
    operations:
      - CREATE
      - UPDATE
      - DELETE
      - CONNECT
    resources:
      - '*'
      - pods/ephemeralcontainers
    scope: 'Namespaced'
